<resources>
    <string name="app_name">Recipe Picker</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_activity_view_recipe">ViewRecipeActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="URL_input_field">What\'s the URL?</string>
    <string name="title">Title</string>
    <string name="ingredients">Ingredients</string>
    <string name="title_input_field">What\'s the recipe called?</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="duration_short">\u003C30 min</string>
    <string name="duration_medium">30\u201360 min</string>
    <string name="duration_long">\u003E60 min</string>
    <string name="no_ingredients_yet">No ingredients yet. Add an ingredient by pressing the button.</string>
    <string name="duration">Duration &amp; Difficulty</string>
    <string name="image">Image</string>
    <string name="add_image">Add image</string>
    <string name="extras">Extras</string>
    <string name="favorite">Favorite</string>
    <string name="remove">Remove</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="image_description">Image of the recipe, user can freely choose the image</string>
    <string name="order_by">Order by:</string>
    <string name="filter">Filter</string>
    <string name="filter_description">Here you can filter all your recipes so you will only get the ones which meet your criteria.</string>
    <string name="filter_times_cooked_description">How often have you cooked it?</string>
    <string name="null_number">0</string>
    <string name="filter_duration_description">How long should cooking it take?</string>
    <string name="filter_max_template">1000</string>
    <string name="filtered_recipe_description">Showing all recipes which you have cooked between &lt;b>%1$d&lt;/b> and &lt;b>%2$d&lt;/b> times and which have a rating between &lt;b>%3$d&lt;/b> and &lt;b>%4$d&lt;/b>.</string>
    <string name="dummy_value">This is a dummy value which will be overwritten</string>
    <string name="search">Search</string>
    <string name="search_input_field">What do you want to find?</string>
    <string name="search_button">Search your cookbook</string>
    <string name="searched_recipe_description">Showing all recipes that match your search: &lt;b>%1$s&lt;/b></string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="quantity">Quantity</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="reset_amount_cooked">Reset amount cooked</string>
    <string name="update">Update</string>
    <string name="needed_ingredients">The ingredients needed for &lt;b>%1$d&lt;/b> persons:</string>
    <string name="times_cooked_with_colon">Times cooked:</string>
    <string name="website">Website:</string>
    <string name="browse">Browse</string>
    <string name="plus_sign">+</string>
    <string name="no_website_added">You haven\'t added a website yet!</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="no_comments">There are no comments to show.</string>
    <string name="comments">Comments:</string>
    <string name="comment_hint">Do you have any comments about the recipe?</string>
    <string name="filter_difficulty_description">How difficult should it be?</string>
    <string name="filter_button">FILTER YOUR COOKBOOK</string>
    <string name="difficulty_filtered_description">Here you can find more &lt;b>%1$s&lt;/b> recipes!</string>
    <string name="category_filtered_description">Here you can find more recipes that have the &lt;b>%1$s&lt;/b> category!</string>
    <string name="four">4</string>
    <string name="reset_list_values">Reset original list values</string>
    <string name="serves_with_column">Serves:</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_button">Add instruction</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="finish">finish</string>
    <string name="timers">Timers</string>
    <string name="cooking_time_to">Time to cook!</string>
    <string name="timer_button">Start timer</string>
    <string name="timer_duration_text">This step takes %1$d minutes and %2$d seconds.\nYou can start a timer if you want. We\'ll notify you when it\'s time.</string>
    <string name="step">Step %1$d</string>
    <string name="no_instruction_yet">No instructions yet. Add an instruction by pressing the button.</string>
    <string name="the_instructions">The instructions:</string>
    <string name="cook_now">Cook this now</string>
    <string name="add_timer">Add a timer</string>
    <string name="instruction_hint">Write your instruction here</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="button_to_remove_ingredient">Button to remove the current ingredient</string>
    <string name="timer">Timer</string>
    <string name="button_to_remove_instruction">Button to remove the current instruction</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="not_favorite">Not favorite</string>
    <string name="favorites">Favorites</string>
    <string name="button_to_remove_timer">Button to remove the current timer</string>
    <string name="time_left_timer">%1$d:%2$d left</string>
    <string name="app_settings">App Settings</string>
    <string name="go_to_github">Go to the GitHub-page</string>
    <string name="github">GitHub</string>
    <string name="version">Version</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="reset_everything">Reset Everything</string>
    <string name="remove_all_description">Remove all the Recipes. Be careful</string>
    <string name="serves">Serves</string>
    <string name="serves_description">Choose for how many serves the ingredients will be shown</string>
</resources>