<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/app_settings">
        <EditTextPreference
            android:inputType="number"
            android:summary="@string/serves_description"
            app:title="@string/serves"
            android:defaultValue="@string/four"
            app:useSimpleSummaryProvider="true"
            app:key="serves_value"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app_name">
        <Preference
            android:title="@string/github"
            android:key="github_button"
            android:summary="@string/go_to_github"
            android:icon="@drawable/ic_github_logo"
            />

        <Preference
            android:title="@string/version"
            android:key="version"
            android:icon="@drawable/ic_info_black_24dp"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/danger_zone">
        <Preference
            android:title="@string/reset_everything"
            android:key="remove_all_button"
            android:summary="@string/remove_all_description"
            android:icon="@drawable/ic_delete_black_24dp"
            />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
