<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageButton
        android:id="@+id/removeTimerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/timerItemTimer"
        android:background="@null"
        android:contentDescription="@string/button_to_remove_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_remove_circle_outline_24px" />

    <TextView
        android:id="@+id/timerItemStepNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/step"
        android:textColor="@color/primaryColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/timerItemTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/timerItemStepNumber"
        android:drawableStart="@drawable/ic_alarm_black_24dp"
        android:text="@string/time_left_timer"
        android:textSize="20sp" />
</RelativeLayout>
