<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    cardview:cardCornerRadius="2dp"
    cardview:cardElevation="3dp"
    cardview:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/recipeImageView"
            android:transitionName="recipeImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/spaghetti_bolognese" />

        <TextView
            android:id="@+id/recipeTitleTextView"
            android:transitionName="recipeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipeImageView"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="5dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#444"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipeIngredientsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipeTitleTextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="3dp"
            android:layout_toStartOf="@+id/recipeRatingTextView"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="2dp"
            android:text="@string/ingredients"
            android:textColor="@color/primaryColor" />

        <TextView
            android:id="@+id/recipeRatingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipeTitleTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="2dp"
            android:drawableEnd="@drawable/ic_star_green_24dp"
            android:layout_marginBottom="2dp"
            android:text="@string/four"
            android:textColor="@color/primaryColor"
            android:textSize="18sp" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
