<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    cardview:cardCornerRadius="2dp"
    cardview:cardElevation="3dp"
    cardview:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/instructionDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/removeInstructionButton"
            android:layout_toEndOf="@+id/instructionNumberTextView"
            android:ellipsize="end"
            android:maxLines="3"
            android:padding="8dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#444"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/instructionNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:text="@string/four"
            android:textColor="@color/primaryColor"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/instructionTimerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instructionDescriptionTextView"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/removeInstructionButton"
            android:layout_toEndOf="@+id/instructionNumberTextView"
            android:drawableStart="@drawable/ic_alarm_black_24dp"
            android:text="@string/timer"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/removeInstructionButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@null"
            android:contentDescription="@string/button_to_remove_instruction"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="0.365"
            cardview:layout_constraintTop_toTopOf="parent"
            cardview:srcCompat="@drawable/ic_baseline_remove_circle_outline_24px" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
